--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
   <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="http://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-  <title>er</title>
+  <title>erp-fe</title>
 </head>
 
 <body>
